rust iter add yt link

--- a/en/_posts/2020-06-04-rust-iter.md
+++ b/en/_posts/2020-06-04-rust-iter.md
@@ -291,3 +291,6 @@ that helped me to solve this issue.
 If you are interested in Rust and you are not on this server,
 you should definetely check out.
 
+And if you want to dive deeper into Rust iterators check out 
+[this youtube video](https://www.youtube.com/watch?v=yozQ9C69pNs)
+
